# wrapper-esp32

./: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml  naudio.hpp  ndisplay.cpp  ndisplay.hpp  ni2c.cpp  ni2c.hpp  ni2c_master.cpp  ni2c_master.hpp  ni2s.cpp  ni2s.hpp  nix-wrapper-esp32  nlogger.cpp  nlogger.hpp  nlvgl.cpp  nlvgl.hpp  nspi.cpp  nspi.hpp  nspi_master.cpp  nspi_master.hpp  ntouch.cpp  ntouch.hpp
.trae/documents/: Implement NSpiMasterLcd.md  为 idf_component.yml 添加开发板依赖规则.md
boards/m5stack_core_s3_c/: m5stack_core_s3.c
boards/m5stack_tab5_c/: m5stack_tab5_cfg_define.h  m5stack_tab5_disp_init_data.h
devices/: aw9523.cpp  aw9523.hpp  axp2101.cpp  axp2101.hpp
doc/board/: power_hub.md
example/: 8m.csv  CMakeLists.txt  M5Cardputer-UserDemo  M5Stack_Tab5_BSP_Analysis.md  chboard  crboard  sdkconfig  sdkconfig-m5cs3  sdkconfig-m5t5  sdkconfig.old
example/.github/: copilot-instructions.md
example/.github/prompts/: plan-dsiDisplayWrapper.prompt.md  plan-fixTab5AudioAndCrash.prompt.md  plan-refactorTab5Init.prompt.md
example/.trae/documents/: Fix Stack Overflow in System Event Task.md  Implement LvglPort class for nix-wrapper-esp32.md  Implement Nvs Class in app_main.cpp (1).md  Implement Nvs Class in app_main.cpp.md  Implement Touch class for nix-wrapper-esp32.md  Implement WifiProvider with Provisioning Support.md  plan_20260204_135128.md  plan_20260204_142114.md  plan_20260204_154118.md  plan_20260204_155417.md  plan_20260204_155729.md  plan_20260204_160255.md  plan_20260204_160722.md  plan_20260204_161309.md  plan_20260204_164852.md  plan_20260206_080939.md  plan_20260206_100340.md  plan_20260206_104741.md  plan_20260206_104926.md  plan_20260206_105226.md  plan_20260207_110808.md  plan_20260207_111852.md  plan_20260207_124231.md  plan_20260207_124903.md  (+39 more)
example/M5UserDemos/: Cardputer
example/main/: CMakeLists.txt  app_main.cpp  freertps.hpp  idf_component.yml  keyboard.cpp  keyboard.h
src/app/: ability.cpp  ability.hpp  service.hpp
src/device/: aw9523.cpp  aw9523.hpp  axp2101.cpp  axp2101.hpp  gt911.cpp  gt911.hpp  ili9341.cpp  ili9341.hpp  ili9881c.cpp  ili9881c.hpp  ip5306.cpp  ip5306.hpp  m5stack_cardputer_keyboard.cpp  m5stack_cardputer_keyboard.hpp  m5stack_unit_extio2.cpp  m5stack_unit_extio2.hpp  pi4ioe5v6408.cpp  pi4ioe5v6408.hpp
src/misc/: u8g2-hal-esp-idf.hpp
src/wrapper/: audio.cpp  audio.hpp  display-dsi.cpp  display-dsi.hpp  display-new.cpp  display-new.hpp  display.cpp  display.hpp  freertos.cpp  freertos.hpp  i2c.cpp  i2c.hpp  i2s.cpp  i2s.hpp  ldo.cpp  ldo.hpp  ledc.cpp  ledc.hpp  logger.cpp  logger.hpp  lvgl.cpp  lvgl.hpp  soc.cpp  soc.hpp  spi.cpp  spi.hpp  touch.cpp  touch.hpp  wifi.cpp  wifi.hpp
(+24 files in other folders)
